news route api added
